[project]
name = "pyalgorithmlab"
description = "一个用于算法实现和探索的综合Python库"
requires-python = ">=3.12"
readme = "README.md"
version = "0.1.0"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "pydantic>=2.11.7",
    "scipy>=1.16.1",
    "scipy-stubs>=1.16.0.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["README.md"]

[tool.ruff.lint]
select = ["C4", "E", "F", "I", "PERF", "UP"]
ignore = ["PERF203"]
